<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar_default"
        ></include>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tool_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomAsig"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/myTextPrimaryColor" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAñadir"
            android:id="@+id/btnAñadir"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/profText"
            android:layout_alignEnd="@+id/profText"
            android:layout_gravity="bottom" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLimpiar"
            android:id="@+id/btnLimpiar"
            android:layout_alignTop="@+id/btnAñadir"
            android:layout_gravity="bottom" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ll"
            android:layout_below="@+id/btnFecha"
            android:layout_alignRight="@+id/btnFecha"
            android:layout_alignEnd="@+id/btnFecha">

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/asigText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:hint="@string/hintAsig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomProf"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp"
            android:textSize="18sp"
            android:textColor="@color/myTextPrimaryColor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/profText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:hint="@string/hintProf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHorario"
            android:id="@+id/textView"
            android:layout_marginTop="31dp"
            android:textColor="@color/myTextPrimaryColor"
            android:textSize="18sp"
            android:layout_below="@+id/profText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAñadir"
            android:id="@+id/btnFecha"
            android:layout_gravity="right"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
